--- a/MakeupAddiction/ios/MakeupAddiction/Activities/Activities.storyboard
+++ b/MakeupAddiction/ios/MakeupAddiction/Activities/Activities.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--Notifications-->
+        <!--Activties Entry-->
         <scene sceneID="XMD-Oy-Zov">
             <objects>
-                <viewController storyboardIdentifier="sbidNotifications_Entry" title="Notifications" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RZV-Qf-QdF" customClass="vcNotifications_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sbidActivities_Entry" title="Activties Entry" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RZV-Qf-QdF" customClass="vcActivities_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FaR-v2-dra"/>
                         <viewControllerLayoutGuide type="bottom" id="aRO-5x-0NF"/>
@@ -22,7 +22,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="800"/>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notifications" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFn-pe-8kl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFn-pe-8kl">
                                 <rect key="frame" x="16" y="20" width="122" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
