--- a/MakeupAddiction/ios/MakeupAddiction/Add/Add.storyboard
+++ b/MakeupAddiction/ios/MakeupAddiction/Add/Add.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--Add-->
+        <!--Add Entry-->
         <scene sceneID="Ffe-Sd-8md">
             <objects>
-                <viewController storyboardIdentifier="sbidAdd_Entry" title="Add" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gJK-oc-RFK" customClass="vcAdd_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sbidAdd_Entry" title="Add Entry" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gJK-oc-RFK" customClass="vcAdd_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RE8-6f-rtD"/>
                         <viewControllerLayoutGuide type="bottom" id="gGp-2D-6s6"/>
