--- a/MakeupAddiction/ios/MakeupAddiction/Home/Home.storyboard
+++ b/MakeupAddiction/ios/MakeupAddiction/Home/Home.storyboard
@@ -4,20 +4,20 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--Feed Entry-->
+        <!--Home Entry-->
         <scene sceneID="kaV-kx-bQL">
             <objects>
-                <pageViewController storyboardIdentifier="sbidFeed_Entry" autoresizesArchivedViewToFullSize="NO" title="Feed Entry" useStoryboardIdentifierAsRestorationIdentifier="YES" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="gHO-7W-U4S" customClass="pvcFeed_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <pageViewController storyboardIdentifier="sbidHome_Entry" autoresizesArchivedViewToFullSize="NO" title="Home Entry" useStoryboardIdentifierAsRestorationIdentifier="YES" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="gHO-7W-U4S" customClass="pvcHome_Entry" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="O9e-Oa-6Vd"/>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y9G-tM-TE4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1245" y="-35.25"/>
         </scene>
-        <!--Feed Latest Activty-->
+        <!--Home Trending-->
         <scene sceneID="WL6-gB-BiZ">
             <objects>
-                <viewController storyboardIdentifier="sbidFeed_LatestActivity" title="Feed Latest Activty" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rau-IR-AKx" customClass="vcFeed_LatestActivity" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sbidHome_Trending" title="Home Trending" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rau-IR-AKx" customClass="vcHome_Trending" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LAA-ZD-NSh"/>
                         <viewControllerLayoutGuide type="bottom" id="7Gm-3v-2rg"/>
@@ -32,7 +32,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="800"/>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latest Activity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Kp-FU-YJV">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Kp-FU-YJV">
                                 <rect key="frame" x="16" y="20" width="122" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -61,10 +61,10 @@
             </objects>
             <point key="canvasLocation" x="2038.5" y="-360"/>
         </scene>
-        <!--Feed Following-->
+        <!--Home Following-->
         <scene sceneID="INU-nr-9Jg">
             <objects>
-                <viewController storyboardIdentifier="sbidFeed_Following" title="Feed Following" useStoryboardIdentifierAsRestorationIdentifier="YES" id="myK-zO-xoa" customClass="vcFeed_Following" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sbidHome_Following" title="Home Following" useStoryboardIdentifierAsRestorationIdentifier="YES" id="myK-zO-xoa" customClass="vcHome_Following" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HWD-Qz-wRb"/>
                         <viewControllerLayoutGuide type="bottom" id="4lo-WV-PLp"/>
@@ -108,10 +108,10 @@
             </objects>
             <point key="canvasLocation" x="2038.5" y="337.5"/>
         </scene>
-        <!--Feed Most Recent-->
+        <!--Home Most Recent-->
         <scene sceneID="4tm-Tm-SiP">
             <objects>
-                <viewController storyboardIdentifier="sbidFeed_MostRecent" title="Feed Most Recent" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mjR-wh-6sz" customClass="vcFeed_MostRecent" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sbidHome_MostRecent" title="Home Most Recent" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mjR-wh-6sz" customClass="vcHome_MostRecent" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="82z-V2-Ba7"/>
                         <viewControllerLayoutGuide type="bottom" id="N3x-Lv-Dfh"/>
@@ -153,7 +153,54 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jzf-X9-RN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2719.5" y="-36.75"/>
+            <point key="canvasLocation" x="2704" y="-360"/>
+        </scene>
+        <!--Feed Reviews-->
+        <scene sceneID="Fae-Nx-zi8">
+            <objects>
+                <viewController storyboardIdentifier="sbidHome_Reviews" title="Feed Reviews" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nzm-9S-Hb3" customClass="vcFeed_Reviews" customModule="MakeupAddiction" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vNH-Fl-S8A"/>
+                        <viewControllerLayoutGuide type="bottom" id="wg6-FP-MmL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lWF-kL-cVE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultmabackground1242@3x.png" translatesAutoresizingMaskIntoConstraints="NO" id="ld9-pR-Zfg">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="400" height="800"/>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q17-bj-dA3">
+                                <rect key="frame" x="16" y="20" width="122" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="10" y="10" width="122" height="21"/>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="ld9-pR-Zfg"/>
+                                <exclude reference="q17-bj-dA3"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="ld9-pR-Zfg"/>
+                                <include reference="q17-bj-dA3"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Bb-ei-hcS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2704" y="337"/>
         </scene>
     </scenes>
     <resources>
